[package]
name = "tilde-table"
version = "0.1.0"
authors = ["David Ball <david@daball.me>"]
description = "Processes spreadsheet data files."
homepage = "https://www.daball.me/"
repository = "https://github.com/daball/tilde-table"
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
none = []
use_ansi = ["ansi_term"]
use_async_io = ["tokio"]
use_csv = ["csv", "serde"]
use_json = ["serde_json"]
use_http = ["http"]
debug = []
default = ["use_ansi", "use_csv", "use_json", "use_http"]

# TODO: The tui implementation is currently broken and experimental.
# Don't bother using it unless you are working on dev. It doesn't work!
[target.'cfg(target_family="unix")'.features]
use_responsive_tui = ["tokio", "ansi_term", "tui", "termion"]

[target.'cfg(target_family="windows")'.features]
use_responsive_tui = ["tokio", "ansi_term", "tui", "crossterm"]

[dependencies]
ansi_term = { version = "0.12.0", optional = true }
csv = { version = "1.1.3", optional = true }
dirs = "2.0.2"
http = { version = "0.2.1", optional = true }
serde = { version = "1.0.106", optional = true }
serde_json = { version = "1.0.51", optional = true }
tokio = { version = "0.2.18", features = ["full"], optional = true } # TODO: Only enable the tokio features needed. See https://docs.rs/tokio/0.2.18/tokio/ for feature list.

[target.'cfg(all(unix))'.dependencies]
tui = { version = "0.9.1", optional = true }
termion = { version = "1.5.5", optional = true }

[target.'cfg(windows)'.dependencies]
tui = { version = "0.9.1", default-features = false, features = ['crossterm'], optional = true }
crossterm = { version = "0.17.3", optional = true }
